# eigenda-kzg

./: Cargo.toml  LICENSE  README.md
points/: .gitignore
points/generate/: Cargo.toml
points/generate/src/: main.rs
samples/: test_0.commit  test_1.commit  test_10000.commit  test_10000.data  test_1000000.commit  test_1000000.data  test_2000.commit  test_2000.data  test_2000000.commit  test_2000000.data  test_4000.commit  test_4000.data  test_4000000.commit  test_4000000.data  test_8000000.commit
src/: lib.rs  points.rs
tests/: .gitignore
tests/program/: Cargo.toml
tests/program/src/: main.rs
tests/script/: Cargo.toml
tests/script/src/: lib.rs  main.rs  tests.rs
